[package]
name = "governance_budget"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.7.1"

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true